argocd/manifests/vikunja/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-postgres
  namespace: vikunja
spec:
  selector:
    app: vikunja-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
